crates/ruff/src/rules/flake8_print/snapshots/ruff__rules__flake8_print__tests__T201_T201.py.snap
---
source: crates/ruff/src/rules/flake8_print/mod.rs
expression: diagnostics
---
- kind:
    name: PrintFound
    body: "`print` found"
    commit: ~
    fixable: false
  location:
    row: 4
    column: 0
  end_location:
    row: 4
    column: 5
  fix: ~
  parent: ~
- kind:
    name: PrintFound
    body: "`print` found"
    commit: ~
    fixable: false
  location:
    row: 5
    column: 0
  end_location:
    row: 5
    column: 5
  fix: ~
  parent: ~
- kind:
    name: PrintFound
    body: "`print` found"
    commit: ~
    fixable: false
  location:
    row: 6
    column: 0
  end_location:
    row: 6
    column: 5
  fix: ~
  parent: ~
- kind:
    name: PrintFound
    body: "`print` found"
    commit: ~
    fixable: false
  location:
    row: 7
    column: 0
  end_location:
    row: 7
    column: 5
  fix: ~
  parent: ~

