crates/ruff/src/rules/flake8_print/snapshots/ruff__rules__flake8_print__tests__T203_T203.py.snap
---
source: crates/ruff/src/rules/flake8_print/mod.rs
expression: diagnostics
---
- - kind:
      name: PPrint
      body: "`pprint` found"
      suggestion: ~
      fixable: false
    location:
      row: 3
      column: 0
    end_location:
      row: 3
      column: 6
    fix: ~
    parent: ~
  - kind:
      name: PPrint
      body: "`pprint` found"
      suggestion: ~
      fixable: false
    location:
      row: 7
      column: 0
    end_location:
      row: 7
      column: 13
    fix: ~
    parent: ~

